clase-8-9-teracloud/load-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator-1
  namespace: mi-app-teraclase
  labels:
    run: load-generator
spec:
  restartPolicy: Never
  containers:
  - name: load-generator
    image: busybox
    command:
    - /bin/sh
    - -c
    - "while true; do wget -q -O- http://mi-app-service.mi-app-teraclase.svc.cluster.local; sleep 0.01; done"

---
apiVersion: v1
kind: Pod
metadata:
  name: load-generator-2
  namespace: mi-app-teraclase
  labels:
    run: load-generator
spec:
  restartPolicy: Never
  containers:
  - name: load-generator
    image: busybox
    command:
    - /bin/sh
    - -c
    - "while true; do wget -q -O- http://mi-app-service.mi-app-teraclase.svc.cluster.local; sleep 0.01; done"

---
apiVersion: v1
kind: Pod
metadata:
  name: load-generator-3
  namespace: mi-app-teraclase
  labels:
    run: load-generator
spec:
  restartPolicy: Never
  containers:
  - name: load-generator
    image: busybox
    command:
    - /bin/sh
    - -c
    - "while true; do wget -q -O- http://mi-app-service.mi-app-teraclase.svc.cluster.local; sleep 0.01; done"
