clase-8-9-teracloud/ingress-external-dns-example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-app-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: mi-app
