clase-8-9-teracloud/ingress-external-dns-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-dns-example
  namespace: default
  annotations:
    # AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: teraclase.sandbox.teratest.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-app-service
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mi-app-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: mi-app
